--- a/.sauce/config.yml
+++ b/.sauce/config.yml
@@ -25,7 +25,12 @@ suites:
     screenResolution: "1920x1080"
     config:
       testFiles: ["**/*.*"]
-
+  - name: "Tutorial test - Windows Firefox 89"
+    platformName: "Windows 10"
+    browser: "firefox"
+    browserVersion: "89.0"
+    config:
+      testFiles: ["**/*.*"]
 artifacts:
   download:
     when: always
